kubernetes/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: game2048-app-clusterip
spec:
  type: ClusterIP
  selector:
    app: game2048
  ports:
    - port: 8080
      protocol: TCP
