kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ClusterIP
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      protocol: TCP
