kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game2048-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: game2048.test
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: game2048-app-clusterip
                port:
                  number: 8080
